tests/snapshots/cli__follow@stale_lock.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/stale_lock.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/stale_lock.flake.lock"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -10,7 +10,6 @@
     crane.inputs.nixpkgs.follows = "nixpkgs";
     # Stale follows: crane no longer has a nested input named `gone`. Triggers
     # the auto-follow removal path so validate_full runs.
-    crane.inputs.gone.follows = "nixpkgs";
   };

   outputs =
@@ -17,7 +16,6 @@
     {
       self,
       nixpkgs,
-      crane,
     }:
     { };
 }

----- stderr -----
warning: stale follows at line 7, column 17: crane.gone -> nixpkgs (source no longer present in flake.lock)
warning: stale-lock follows at line 7, column 17: crane.nixpkgs -> nixpkgs (flake.lock resolves to <none>; run `nix flake lock`)
