tests/snapshots/cli__follow@transitive_grandchild_cycle.snap
---
source: tests/cli.rs
assertion_line: 618
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/transitive_grandchild_cycle.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/transitive_grandchild_cycle.flake.lock"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All inputs are already deduplicated.

----- stderr -----
