tests/snapshots/cli__follow@transitive_self_named.snap
---
source: tests/cli.rs
assertion_line: 617
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/transitive_self_named.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/transitive_self_named.flake.lock"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All inputs are already deduplicated.

----- stderr -----
