tests/snapshots/cli__follow_auto@follows_cycle.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/follows_cycle.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/follows_cycle.flake.lock"
    - "--diff"
    - follow
    - "--auto"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
No inputs to auto-follow.
All nested inputs either already follow something or have no matching top-level input.

----- stderr -----
