tests/snapshots/cli__follow_auto@root.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/root.flake.lock"
    - "--diff"
    - follow
    - "--auto"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
No inputs to auto-follow.
All nested inputs either already follow something or have no matching top-level input.

----- stderr -----
